--- a/archives/alpha_nine/v1/a9.ipynb
+++ b/archives/alpha_nine/v1/a9.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "from app.rl.alpha_nine.v1.a9 import A9Model, convert_inputs\n",
+    "from alpha_nine.v1.a9 import A9Model, convert_inputs\n",
     "from gym_nine_mens_morris.envs.nine_mens_morris_env import NineMensMorrisEnv, Pix\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
