--- a/archives/tictactoe/t3.ipynb
+++ b/archives/tictactoe/t3.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from app.rl.tictactoe.t3_test import T3Model, convert_inputs\n",
+    "from tictactoe.t3_test import T3Model, convert_inputs\n",
     "from gym_tic_tac_toe.envs.tic_tac_toe_env import TicTacToeEnv, Pix\n",
     "import torch\n",
     "from torch.nn import functional as F\n",
