--- a/tmp.ipynb
+++ b/tmp.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "from pettingzoo.classic import connect_four_v3\n",
     "import numpy as np\n",
-    "from app.rl.dqn.games.train_gridworld import GridWorldEnvWrapper"
+    "from dqn.games.train_gridworld import GridWorldEnvWrapper"
    ],
    "metadata": {
     "collapsed": false,
