--- a/exp/sryvl_env/sb3_test.ipynb
+++ b/exp/sryvl_env/sb3_test.ipynb
@@ -59,7 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg')\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "plt.imshow(np.moveaxis(obs, 0, -1))\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -69,26 +86,26 @@
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n",
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n",
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n",
-      "□ □ □     ■ ■ ■ • • • ■ ■ ■ ■ ■ ■   • •       □ □ □\n",
-      "□ □ □     ■ ■ ■ •   •                 •       □ □ □\n",
-      "□ □ □   • ■ ■ ■   •   •                       □ □ □\n",
-      "□ □ □                   •               • •   □ □ □\n",
-      "□ □ □                 • ■         •     •     □ □ □\n",
-      "□ □ □ ■ •             • •     •   ■ ■       • □ □ □\n",
-      "□ □ □ ■       ■                 ■ ■ ■ ■ ■ ■ ■ □ □ □\n",
-      "□ □ □ ■     🔺             •       ■ ■ ■ ■ ■ ■ □ □ □\n",
-      "□ □ □             ■ ■ ■         • ■ ■ ■ ■   • □ □ □\n",
-      "□ □ □ ■ •   •     ■ ■ ■     •     ■ ■ ■       □ □ □\n",
-      "□ □ □ ■ ■     •   ■ ■ ■ • •       ■ ■         □ □ □\n",
-      "□ □ □ ■ ■                         •   • •     □ □ □\n",
-      "□ □ □ • • ■     •           •     •           □ □ □\n",
-      "□ □ □     ■ ■       ■ •                       □ □ □\n",
-      "□ □ □     ■ ■ ■ ■ ■ ■ ■ ■ ■   ■ ■ ■ ■   ■ ■ • □ □ □\n",
-      "□ □ □ • ■ ■ ■     ■ ■ ■ ■ ■ ■ ■ ■   • ■     • □ □ □\n",
-      "□ □ □ ■ ■ ■   •     ■ ■ ■ ■ ■ ■               □ □ □\n",
-      "□ □ □             ■ ■ ■       ■             • □ □ □\n",
-      "□ □ □       • • ■ ■ ■   •     ■       ■ ■     □ □ □\n",
-      "□ □ □     •       ■   •           ■ ■ ■ ■ ■   □ □ □\n",
+      "□ □ □                 • ■ ■ ■ •   •   ■ ■ ■ ■ □ □ □\n",
+      "□ □ □ ■       •   ■       ■ ■ • •     •       □ □ □\n",
+      "□ □ □     •   •       🔺     ■ ■ ■             □ □ □\n",
+      "□ □ □     •             •     ■ ■             □ □ □\n",
+      "□ □ □     •   •       •       ■ •     • •     □ □ □\n",
+      "□ □ □ ■           •         ■ ■           •   □ □ □\n",
+      "□ □ □ ■       ■ ■   ■ ■ ■ ■ ■ ■         ■ ■   □ □ □\n",
+      "□ □ □       •   ■ ■ ■ ■ ■ ■ ■ ■ •     ■ ■ ■ ■ □ □ □\n",
+      "□ □ □ •           ■ ■ ■ ■ ■       ■     ■ ■ ■ □ □ □\n",
+      "□ □ □ •         • ■   • •   •     ■       ■ ■ □ □ □\n",
+      "□ □ □ ■ ■ ■       ■         •     ■     •     □ □ □\n",
+      "□ □ □ ■ ■ ■ ■ ■ ■ ■ ■     •   • ■ ■           □ □ □\n",
+      "□ □ □ ■ ■     ■ ■ ■ ■ ■ ■       ■ ■ ■         □ □ □\n",
+      "□ □ □ ■ •                   •     ■ ■ ■ • • • □ □ □\n",
+      "□ □ □ •       • • •   •             ■ ■ ■     □ □ □\n",
+      "□ □ □       •     •             •   ■ ■ ■ ■ ■ □ □ □\n",
+      "□ □ □     •     •   ■ ■ •   •       • ■ ■ ■ ■ □ □ □\n",
+      "□ □ □   •   •     ■ ■ ■ •     •           • ■ □ □ □\n",
+      "□ □ □ ■ ■         ■ ■ ■         ■             □ □ □\n",
+      "□ □ □ ■ ■   • •     ■ ■                       □ □ □\n",
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n",
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n",
       "□ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □\n"
@@ -104,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
