Added eating action

--- a/exp/sryvl_env/sb3_test.ipynb
+++ b/exp/sryvl_env/sb3_test.ipynb
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "env.render('world_console')"
+    "env.render('ansi')"
    ],
    "metadata": {
     "collapsed": false
@@ -292,10 +292,10 @@
     "    action, _states = model.predict(obs, deterministic=True)\n",
     "    obs, rewards, dones, info = env.step(int(action))\n",
     "    if 2000 < i < 2100:\n",
-    "        env.render('world_console')\n",
+    "        env.render('ansi')\n",
     "    if dones:\n",
     "        break\n",
-    "env.render('world_console'), i"
+    "env.render('ansi'), i"
    ],
    "metadata": {
     "collapsed": false
@@ -306,7 +306,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "env.render('world_console')"
+    "env.render('ansi')"
    ],
    "metadata": {
     "collapsed": false
