--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -235,19 +235,16 @@
     "def self_play(env, mcts: MCTS):\n",
     "    tuples = []\n",
     "    env.reset()\n",
-    "\n",
-    "    while True:\n",
+    "    while not (env.terminations[env.agent_selection] or env.truncations[env.agent_selection]):\n",
     "        [mcts.simulate(env) for _ in range(100)]\n",
     "        p = mcts.get_action_prob(env)\n",
-    "        agent = env.agent_selection\n",
-    "        tuples.append([env.observe(agent)['observation'], p, agent])\n",
-    "\n",
     "        action = np.random.choice(len(p), p=p)\n",
+    "        tuples.append([env.observe(env.agent_selection)['observation'], p, env.agent_selection])\n",
+    "\n",
     "        env.step(action)\n",
-    "        if env.terminations[agent] or env.truncations[agent]:\n",
-    "            for tup in tuples:\n",
-    "                tup[2] = env.rewards[tup[2]]\n",
-    "            return tuples"
+    "    for tup in tuples:\n",
+    "        tup[2] = env.rewards[tup[2]]\n",
+    "    return tuples"
    ],
    "metadata": {
     "collapsed": false
