Removed nair's alphazero implementation

--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# AlphaZero from scratch under 230 lines of code!\n",
     "\n",
-    "This is by far the cleanest implementation of AlphaZero on the internet.\n",
+    "This is by far the simplest implementation of AlphaZero on the internet.\n",
     "This could be considered as a simplified version of suragnair's implementation inspired from higgsfield's RL Adventure.\n",
     "\n",
     "- Uses PyTorch.\n",
