--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -229,7 +229,7 @@
     "        r = env.rewards[env.agents[0]]\n",
     "        wins_1 += int(r > 1)\n",
     "        wins_2 += int(r < 1)\n",
-    "    return wins_1, wins_2\n",
+    "    return wins_1 / n_episodes, wins_2 / n_episodes\n",
     "\n",
     "\n",
     "def self_play(env, mcts: MCTS):\n",
@@ -327,12 +327,12 @@
     "        losses.append(loss_mean.compute())\n",
     "\n",
     "    \"\"\" Evaluate \"\"\"\n",
-    "    n_eval_episodes = 20\n",
-    "    wins, loses = [0, 0], [0, 0]\n",
-    "    wins[0], loses[0] = evaluate(env, model, old_model, n_eval_episodes // 2)\n",
-    "    loses[1], wins[1] = evaluate(env, old_model, model, n_eval_episodes // 2)\n",
-    "    win_rates.append(sum(wins) / n_eval_episodes)\n",
-    "    lose_rates.append(sum(loses) / n_eval_episodes)\n",
+    "    wins_0, loses_0 = evaluate(env, model, old_model, 10)\n",
+    "    loses_1, wins_1 = evaluate(env, old_model, model, 10)\n",
+    "\n",
+    "    win_rates.append((wins_0 + wins_1) / 2)\n",
+    "    lose_rates.append((loses_0 + loses_1) / 2)\n",
+    "\n",
     "    if win_rates[-1] > lose_rates[-1]:\n",
     "        old_model = deepcopy(model)\n",
     "\n",
