--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -115,7 +115,16 @@
     "            return -v\n",
     "\n",
     "        \"\"\" SELECT \"\"\"\n",
-    "        a = self.select(s, action_mask)\n",
+    "        cpuct = 1\n",
+    "        q = np.array([self.q_sa.get((s, a), 0) for a in range(len(action_mask))])\n",
+    "        n = np.array([self.n_sa.get((s, a), 0) for a in range(len(action_mask))])\n",
+    "\n",
+    "        # (1− ε)pa+ εηa, where η∼ Dir(0.03) and ε= 0.25\n",
+    "        p = 0.75 * self.p_s[s] + 0.25 * np.random.dirichlet([2] * len(q))\n",
+    "\n",
+    "        u = q + cpuct * p * np.sqrt(n.sum() + 1e-6) / (1 + n)\n",
+    "        u[action_mask == 0] = -np.inf\n",
+    "        a = u.argmax()\n",
     "\n",
     "        \"\"\" EXPAND \"\"\"\n",
     "        next_env = deepcopy(env)\n",
@@ -137,18 +146,6 @@
     "            self.q_sa[(s, a)] = v\n",
     "            self.n_sa[(s, a)] = 1\n",
     "        return -v\n",
-    "\n",
-    "    def select(self, s, action_mask, cpuct=1):\n",
-    "        \"\"\"Pick the action with the highest upper confidence bound\"\"\"\n",
-    "        q = np.array([self.q_sa.get((s, a), 0) for a in range(len(action_mask))])\n",
-    "        n = np.array([self.n_sa.get((s, a), 0) for a in range(len(action_mask))])\n",
-    "\n",
-    "        # (1− ε)pa+ εηa, where η∼ Dir(0.03) and ε= 0.25\n",
-    "        p = 0.75 * self.p_s[s] + 0.25 * np.random.dirichlet([2] * len(q))\n",
-    "\n",
-    "        u = q + cpuct * p * np.sqrt(n.sum() + 1e-6) / (1 + n)\n",
-    "        u[action_mask == 0] = -np.inf\n",
-    "        return u.argmax()\n",
     "\n",
     "    @staticmethod\n",
     "    def evaluate(observation, action_mask, model):\n",
