--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -167,8 +167,7 @@
     "            p /= p_sum  # re-normalize\n",
     "        else:\n",
     "            print(\"All valid moves were masked, doing a workaround.\")\n",
-    "            p += action_mask\n",
-    "            p /= p.sum()\n",
+    "            p = action_mask / action_mask.sum()\n",
     "\n",
     "        return p, v\n",
     "\n",
