Tiny bug in alphazero

--- a/templates/alphazero.ipynb
+++ b/templates/alphazero.ipynb
@@ -110,7 +110,7 @@
     "        \"\"\" EVALUATE \"\"\"\n",
     "        # If s is leaf, then evaluate s with model\n",
     "        if s not in self.p_s:\n",
-    "            p, v = self.evaluate(observation, action_mask, model)\n",
+    "            p, v = self.evaluate(observation, action_mask)\n",
     "            self.p_s[s] = p\n",
     "            return -v\n",
     "\n",
@@ -147,14 +147,13 @@
     "            self.n_sa[(s, a)] = 1\n",
     "        return -v\n",
     "\n",
-    "    @staticmethod\n",
-    "    def evaluate(observation, action_mask, model):\n",
+    "    def evaluate(self, observation, action_mask):\n",
     "        observation = torch.from_numpy(observation).float().view(1, -1)  # (1, 18)\n",
     "\n",
     "        # Get predictions\n",
-    "        model.eval()\n",
+    "        self.model.eval()\n",
     "        with torch.no_grad():\n",
-    "            p, v = model(observation)  # (1, 9), (1, 1)\n",
+    "            p, v = self.model(observation)  # (1, 9), (1, 1)\n",
     "        p = p.cpu().numpy()[0]  # (9,)\n",
     "        v = v.cpu().numpy()[0][0]  # scalar\n",
     "\n",
@@ -239,7 +238,7 @@
     "\n",
     "        env.step(action)\n",
     "    for tup in tuples:\n",
-    "        tup[2] = env.rewards[tup[2]]\n",
+    "        tup[-1] = env.rewards[tup[-1]]\n",
     "    return tuples"
    ],
    "metadata": {
