Forgot batch dimension :sob:

--- a/exp/di/cpgs/_0_discovery/cpg_kuramoto.ipynb
+++ b/exp/di/cpgs/_0_discovery/cpg_kuramoto.ipynb
@@ -66,10 +66,9 @@
     "        B: (n,)  0-1\n",
     "        return y: (n,)\n",
     "        \"\"\"\n",
-    "        # TODO: Convert all of this into a matrix operations.\n",
     "\n",
     "        i = self.id\n",
-    "        dt = 0.05  # TODO: What is dt????\n",
+    "        dt = 0.05\n",
     "\n",
     "        diffs = []\n",
     "        for j in range(n):\n",
@@ -286,6 +285,8 @@
     "        B: (n,)\n",
     "        return y: (n,)\n",
     "        \"\"\"\n",
+    "        # TODO: Dude, you forgot batch dimension :facepalm:\n",
+    "\n",
     "        w = to_symmetric_upper(w)  # (n, n)\n",
     "        psi = to_symmetric_upper(psi, skew=True)  # (n, n)\n",
     "\n",
