Creating cpg agents

--- a/exp/di/mujoco_exp/learning/_2_crawler/_0_random_target/agents/_0_crawler_ddpg.ipynb
+++ b/exp/di/mujoco_exp/learning/_2_crawler/_0_random_target/agents/_0_crawler_ddpg.ipynb
@@ -34,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from crawler import WalkToTargetEnv"
+    "from ..crawler import WalkToTargetEnv"
    ]
   },
   {
